fix chevron missalignment after fixing menu icons

--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -763,10 +763,12 @@ section.dctsdk-work-flow {
     cursor: pointer;
     font-size: 1.1875rem;
    // margin-bottom: 1.875rem;
-    margin-bottom: 0.625rem; /* Demand by rusty */
+   //GN-c margin-bottom: 0.625rem;
+    margin-bottom: 2.5rem;
     width:290px;
     @media screen and (min-width: 768px) {
-       margin-bottom: 0.625rem
+   //GN-c margin-bottom: 0.625rem;
+    margin-bottom: 2.625rem;
     }
   }
 
@@ -1020,6 +1022,7 @@ section.dctsdk-work-flow {
     margin-top: 0;
   }
 
+
   .work-flow_menu ul li .work-flow-icon {
     background-color: transparent;
     background-repeat: no-repeat;
@@ -1056,6 +1059,7 @@ section.dctsdk-work-flow {
   }
 
   .work-flow-support-mode-mobile.open {
+    margin-top: 2.125rem;
     display: block;
 
 
@@ -1100,13 +1104,21 @@ section.dctsdk-work-flow {
 }
 
 .work-flow-menu-item {
+
+  position:relative;
+
   .chev-arrow-right {
+    position:absolute;
     transform: initial;
     transition-duration: 150ms;
+    top:6px;
   }
 }
 
 .work-flow-menu-item.open {
+
+  position:relative;
+
   .chev-arrow-right {
     transform: rotate(90deg);
     transition-duration: 150ms;
